テスト/src/objects/timecard_SFO__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDate_custom__c</fullName>
        <description>Scon実行用項目</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>作成日（カスタム）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>無効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Work_Time__c</fullName>
        <formula>/*勤怠修正済みの場合は1で未修正の場合は0*/
 IF (ISNULL(Syussya_Time__c), &apos;0&apos;, &apos;1&apos;)</formula>
        <label>勤怠修正済フラグ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>事前にまとめて登録してあるものを反映しています。（管理者設定の組織プロファイル「休日」で設定）</inlineHelpText>
        <label>祝日</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kbn__c</fullName>
        <description>OffJTまたはOJTの区分です。
訓練生のそれぞれの開始・終了期間に基づき表示されます。</description>
        <formula>IF(TEXT(staff__r.staffstatus__c) = &apos;求職中&apos;,&apos;求職中&apos;,IF(AND(TEXT(staff__r.staffstatus__c) = &apos;求職中&apos;, staff__r.logicaldelete_date__c &lt;= Syukkin_Date__c), &apos;求職中&apos;,IF( AND(TEXT(staff__r.staffstatus__c) = &apos;就職決定&apos;,staff__r.logicaldelete_date__c &lt;= Syukkin_Date__c),&apos;就職決定&apos;, IF(AND(TEXT(staff__r.staffstatus__c) = &apos;就職未決定&apos;,staff__r.logicaldelete_date__c &lt;= Syukkin_Date__c),&apos;就職未決定&apos;,IF( AND(TEXT(staff__r.staffstatus__c) = &apos;就職決定&apos;,staff__r.logicaldelete_date__c &lt;= Syukkin_Date__c),&apos;就職決定&apos;, IF(AND(TEXT(staff__r.staffstatus__c) = &apos;退職など&apos;,staff__r.logicaldelete_date__c &lt;= Syukkin_Date__c),&apos;退職など&apos;, IF(AND(staff__r.OffJTstart__c &lt;= Syukkin_Date__c , Syukkin_Date__c &lt;= staff__r.OffJTend__c ), &apos;OffJT&apos;, IF(AND( staff__r.OJTstart__c &lt;= Syukkin_Date__c , Syukkin_Date__c &lt;= staff__r.OJTend__c ), &apos;OJT&apos;, &apos;&apos;))))))))</formula>
        <label>区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MidNight_Rest_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>こちらは分での入力となります。
1時間の休憩を取得した場合は「60」と入れてください。</inlineHelpText>
        <label>深夜休憩時間</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MidNight_Work_Tanka__c</fullName>
        <formula>ROUND ( tanka__c * 0.25 + 0.4 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・深夜残業付加単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MidNight_Work_Time_Calc__c</fullName>
        <formula>IF(Taisya_Hour__c - ( MidNight_Rest_Time__c / 60 ) &gt;= 22 , ROUND(Taisya_Hour__c - ( MidNight_Rest_Time__c / 60 ) - 22,2) ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>深夜残業時間（h）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rest_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>こちらは分での入力となります。
1時間の休憩を取得した場合は「60」と入れてください。</inlineHelpText>
        <label>休憩時間</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>給料（非表示）</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Working_Hours_Number__c</fullName>
        <formula>if( AND(dayofweek__c != &apos;土&apos;,dayofweek__c != &apos;日&apos;, Holiday__c = FALSE), if( leader__c = &apos;L&apos; ,8,7.5),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>予定勤務時間（数式）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Syukkin_Date_To__c</fullName>
        <label>出勤日To（非表示）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syukkin_Date__c</fullName>
        <label>出勤日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Syussya_Time__c</fullName>
        <description>Syussya_Time</description>
        <label>出社日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syussya_Time_value__c</fullName>
        <description>1.出社日時の時間（hh）をテキスト変換し、数値にして+9時間。
2.出社日時の分（mm）をテキスト変換し、数値にして時間算出するために/60し、小数点下2桁でまるめる
3.上記1と2を加算</description>
        <formula>(VALUE(MID(TEXT(Syussya_Time__c),12,2)) +9)+(VALUE(MID(TEXT(Syussya_Time__c),15,2)) /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出勤時間を数値換算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Syussya_bi__c</fullName>
        <formula>DATEVALUE(  Syussya_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出社日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Taisya_Hour__c</fullName>
        <description>残業時間（18時以降）を算出するための項目。
※項目名：退社時間を数値換算で対応可能だが、計算文字数制限オーバーのため作成</description>
        <formula>/*VALUE(MID(TEXT(Taisya_Time__c),12,2))+9*/
/*
IF(AND(DAY( Syussya_bi__c ) =  DAY( Taisya_bi__c ),(VALUE(MID(TEXT(Taisya_Time__c),12,2))+9) =24),0,IF((VALUE(MID(TEXT(Taisya_Time__c),12,2))+9)&gt;24,VALUE(MID(TEXT(Taisya_Time__c),12,2))-15,VALUE(MID(TEXT(Taisya_Time__c),12,2))+9))*/

/*コンパイルエラーとなるため、さらに短縮
IF(AND(DAY( Syussya_bi__c ) =  DAY( Taisya_bi__c ),(VALUE(MID(TEXT(Taisya_Time__c),12,2))+9) =24),0,VALUE(MID(TEXT(Taisya_Time__c),12,2))+ 9 + (VALUE(MID(TEXT(Taisya_Time__c),15,2)) /60))*/

IF(  ISPICKVAL(workrecord__c , &quot;&quot;),0,VALUE(MID(TEXT(Taisya_Time__c),12,2))+ 9 + (VALUE(MID(TEXT(Taisya_Time__c),15,2)) /60))

/*
VALUE(MID(TEXT(Taisya_Time__c),12,2))+ 9 + (VALUE(MID(TEXT(Taisya_Time__c),15,2)) /60)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社時間（時間のみ）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taisya_Time__c</fullName>
        <description>Taisya_Time</description>
        <label>退社日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Taisya_Time_value__c</fullName>
        <description>1.退社日時をテキスト変換し、時間（hh）部分を切出し、数値にして+9時間。
2.退社日時をテキスト変換し、分（mm）部分を切出し、数値にして時間算出するために/60し、小数点下2桁でまるめる
3.上記1と2を加算</description>
        <formula>(VALUE(MID(TEXT(Taisya_Time__c),12,2))+9)+(VALUE(MID(TEXT(Taisya_Time__c) ,15,2)) /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社時間を数値換算</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taisya_bi__c</fullName>
        <formula>DATEVALUE(  Taisya_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Taisyo_data__c</fullName>
        <description>（出社日が昨日かつ退社日時が空欄）もしくは、出社日が今日だったら1、
それ以外は0</description>
        <formula>if(OR(AND( Syussya_bi__c = TODAY() -1 , ISNULL( Taisya_Time__c )), Syussya_bi__c = TODAY() ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>退社対象データフラグ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Time__c</fullName>
        <formula>(Taisya_Time__c - Syussya_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務時間（h）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dayofweek__c</fullName>
        <formula>CASE( MOD(  Syukkin_Date__c  - DATE(1900, 1, 7) ,7), 0, &quot;日&quot;, 1, &quot;月&quot;, 2, &quot;火&quot;, 3, &quot;水&quot;, 4, &quot;木&quot;, 5, &quot;金&quot;, 6, &quot;土&quot;, &quot;#エラー#&quot;)</formula>
        <label>曜日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leader__c</fullName>
        <formula>IF ( staff__r.leader__c = True , &apos;L&apos; , NULL )</formula>
        <label>リーダー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lname_kana_Text__c</fullName>
        <label>姓（カナ）検索用</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lname_kana__c</fullName>
        <formula>staff__r.lname_kana__c</formula>
        <label>姓（カナ）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salary_basic__c</fullName>
        <formula>IF ( Syukkin_Date__c &lt; TODAY() , ROUND( tanka__c * Working_Time__c ,0 ) , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・給与（勤務時間）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>salary_estimate__c</fullName>
        <formula>IF ( AND ( Syukkin_Date__c  &gt;= TODAY() , ISNULL( Working_Time__c ) = FALSE , dayofweek__c &lt;&gt; &apos;土&apos; , dayofweek__c &lt;&gt; &apos;日&apos;, Holiday__c = FALSE ) , IF ( leader__c = &apos;L&apos; , ROUND( tanka__c * 8 ,0 ) , ROUND( tanka__c  * 7.5 ,0 ) ) , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・給与（予定分）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>salary_midnight__c</fullName>
        <description>ROUNDUPが使えないので、0.4を追加</description>
        <formula>IF ( Syukkin_Date__c &lt; TODAY() , ROUND( MidNight_Work_Tanka__c * MidNight_Work_Time_Calc__c , 0) , 0)</formula>
        <label>・給与（深夜）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>salary_overtime__c</fullName>
        <description>ROUNDUPが使えないので、0.4を追加</description>
        <formula>IF ( Syukkin_Date__c &lt; TODAY() , ROUND( zangyou_Tanka__c * zangyou__c , 0 ) , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・給与（時間外）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>staff_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>訓練生(検索用)</label>
        <referenceTo>staff_SFO__c</referenceTo>
        <relationshipLabel>勤怠確認 (訓練生(検索用))</relationshipLabel>
        <relationshipName>staff_child_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>訓練生</label>
        <referenceTo>staff_SFO__c</referenceTo>
        <relationshipName>timecard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>syukkinn_Scon__c</fullName>
        <description>Scon実行用項目</description>
        <formula>SUBSTITUTE(TEXT(DATEVALUE( Syussya_Time__c )), &quot;-&quot;,&quot;/&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出勤日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tanka__c</fullName>
        <formula>IF(AND(staff__r.OffJTstart__c &lt;=  Syukkin_Date__c , Syukkin_Date__c &lt;= staff__r.OffJTend__c ),staff__r.hourlyrate_OffJT__c , IF(AND( staff__r.OJTstart__c &lt;= Syukkin_Date__c , Syukkin_Date__c &lt;= staff__r.OJTend__c ),staff__r.hourlyrate_OJT__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>trainingtermSearch__c</fullName>
        <label>訓練期間(検索用)</label>
        <picklist>
            <picklistValues>
                <fullName>第1期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第2期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第3期</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>第4期</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trainingterm__c</fullName>
        <formula>TEXT ( staff__r.trainingterm__c )</formula>
        <label>訓練期間</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>worknote__c</fullName>
        <label>勤務特記</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workrecord__c</fullName>
        <label>勤務実績</label>
        <picklist>
            <picklistValues>
                <fullName>出勤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>欠勤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>有休</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zangyo_time_18pm__c</fullName>
        <formula>IF( Taisya_Hour__c &lt;= 18 , 0 , Taisya_Time_value__c - 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>・残業</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zangyou_Tanka__c</fullName>
        <formula>ROUND ( tanka__c * 0.25 + 0.4 , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>小数点以下切り上げ</inlineHelpText>
        <label>・残業付加単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zangyou__c</fullName>
        <description>勤務時間が9時間以上の場合を残業時間として算出</description>
        <formula>if( Working_Time__c -7.5&lt;=0,0,Working_Time__c -7.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残業時間（h）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>勤怠確認</label>
    <listViews>
        <fullName>TimeCard_Check_Absence</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>Holiday__c</columns>
        <columns>dayofweek__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>workrecord__c</field>
            <operation>equals</operation>
            <value>欠勤</value>
        </filters>
        <label>勤怠状況_チェックリスト（欠勤）</label>
    </listViews>
    <listViews>
        <fullName>TimeCard_Check_Soutai</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Kbn__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Taisya_Time_value__c</field>
            <operation>lessThan</operation>
            <value>17.5</value>
        </filters>
        <filters>
            <field>workrecord__c</field>
            <operation>equals</operation>
            <value>出勤</value>
        </filters>
        <label>勤怠状況_チェックリスト（早退）</label>
    </listViews>
    <listViews>
        <fullName>TimeCard_Check_Tardiness</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syussya_Time_value__c</field>
            <operation>greaterThan</operation>
            <value>9</value>
        </filters>
        <filters>
            <field>workrecord__c</field>
            <operation>equals</operation>
            <value>出勤</value>
        </filters>
        <label>勤怠状況_チェックリスト（遅刻）</label>
    </listViews>
    <listViews>
        <fullName>TimeCard_No_Check</fullName>
        <booleanFilter>( 1 OR 2 ) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>staff__c</columns>
        <columns>Kbn__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>zangyo_time_18pm__c</columns>
        <columns>Rest_Time__c</columns>
        <columns>MidNight_Rest_Time__c</columns>
        <columns>worknote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syussya_Time__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Taisya_Time__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>勤怠_未入力チェックリスト</label>
    </listViews>
    <listViews>
        <fullName>View_d_2</fullName>
        <columns>NAME</columns>
        <columns>staff__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>syukkinn_Scon__c</columns>
        <columns>Kbn__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Rest_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>X1</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第1期</value>
        </filters>
        <label>第1期 勤怠一覧（今月）</label>
    </listViews>
    <listViews>
        <fullName>X2</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第2期</value>
        </filters>
        <label>第2期 勤怠一覧（今月）</label>
    </listViews>
    <listViews>
        <fullName>X3</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第3期</value>
        </filters>
        <label>第3期 勤怠一覧（今月）</label>
    </listViews>
    <listViews>
        <fullName>X4</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>trainingterm__c</field>
            <operation>equals</operation>
            <value>第4期</value>
        </filters>
        <label>第4期 勤怠一覧（今月）</label>
    </listViews>
    <listViews>
        <fullName>lastmonth</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>勤怠一覧（先月）</label>
    </listViews>
    <listViews>
        <fullName>lastweek</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>勤怠一覧（先週）</label>
    </listViews>
    <listViews>
        <fullName>thismonth</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>勤怠一覧（今月）</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>勤怠一覧（今日）</label>
    </listViews>
    <listViews>
        <fullName>tomorrow</fullName>
        <columns>NAME</columns>
        <columns>staff__c</columns>
        <columns>Kbn__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>worknote__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Rest_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>明日の勤怠</label>
    </listViews>
    <listViews>
        <fullName>yesterday</fullName>
        <columns>NAME</columns>
        <columns>Kbn__c</columns>
        <columns>staff__c</columns>
        <columns>lname_kana__c</columns>
        <columns>leader__c</columns>
        <columns>Syukkin_Date__c</columns>
        <columns>dayofweek__c</columns>
        <columns>Holiday__c</columns>
        <columns>workrecord__c</columns>
        <columns>Syussya_Time__c</columns>
        <columns>Taisya_Time__c</columns>
        <columns>Working_Time__c</columns>
        <columns>zangyou__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Syukkin_Date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>勤怠一覧（昨日）</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>NO.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NGblank_midresttime</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK ( MidNight_Rest_Time__c )</errorConditionFormula>
        <errorDisplayField>MidNight_Rest_Time__c</errorDisplayField>
        <errorMessage>深夜休憩時間を空白にすることはできません。休憩を取得していない場合は、0と入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_resttime</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK ( Rest_Time__c )</errorConditionFormula>
        <errorDisplayField>Rest_Time__c</errorDisplayField>
        <errorMessage>休憩時間を空白にすることはできません。休憩を取得していない場合は、0と入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_endtime</fullName>
        <active>true</active>
        <description>出社日時　＞　退社日時　はNG</description>
        <errorConditionFormula>AND ( TEXT(staff__r.staffstatus__c) =&apos;OffJT&apos;,TEXT(staff__r.staffstatus__c) =&apos;OJT&apos;, TEXT( workrecord__c ) =&apos;出勤&apos; , Syussya_Time__c &gt;= Taisya_Time__c )</errorConditionFormula>
        <errorDisplayField>Taisya_Time__c</errorDisplayField>
        <errorMessage>保存できませんでした。
退社時間の入力に誤りがあるようです。
再度入力した退社時間を確認してから、保存を押してください。</errorMessage>
    </validationRules>
</CustomObject>